Fixed carousel size and scroll pattern, colors, alignment

--- a/src/app/layout/layout.component.scss
+++ b/src/app/layout/layout.component.scss
@@ -7,15 +7,6 @@
   text-shadow: 0px 2px 5px rgba(0, 0, 0, 0.8);
 }
 
-
-.background3 {
-  @include gradient(#214869, lighten(#8192d1, 20));
-}
-
-.background4 {
-  @include gradient($green1, lighten($green1, 20));
-}
-
 .fixed-nav {
   z-index: 100;
   position: fixed;
@@ -28,43 +19,40 @@
   .contained-elements {
     width: $container-width;
   }
-}
-
-.sidebar {
-  opacity: 0;
-  border-left: 0px solid black;
-  position: fixed;
-  background-color: #2c3c70 !important;
-  z-index: 20;
-  overflow-x: hidden;
-  right: 60px;
-  top: 20px;;
-  width: 250px;
-  height:100vh;
-  box-shadow: 0px 0px 8px rgba(0, 0, 0, 0.35);
-}
-
-.main-navigation-groups {
-  ul {
-    padding: 0;
-    li {
-      padding: .55rem 0;
-      border-top: 1px solid transparent;
-      border-bottom: 1px solid rgba(128, 128, 128, 0.69);
-      list-style: none;
-      font-size: .8rem;
-      &:hover {
-        border-top: 1px solid;
-        border-color: $central-gold;
-        background-color: rgba(31, 40, 62, 0.56);
-      }
-      &:disabled {
-        color: #ccc;
-      }
-      a {
-        margin-left: 1rem;
-        color: $central-gold-text;
-        font-weight: 400;
+  .sidebar {
+    opacity: 1;
+    border-left: 0px solid black;
+    position: absolute;
+    background-color: #2e4970 !important;
+    overflow-x: hidden;
+    right: -250px;
+    top: 10px;
+    width: 250px;
+    height:100vh;
+    box-shadow: 0px 0px 8px rgba(0, 0, 0, 0.35);
+    .main-navigation-groups {
+      ul {
+        padding: 0;
+        li {
+          padding: .55rem 0;
+          border-top: 1px solid transparent;
+          border-bottom: 1px solid rgba(128, 128, 128, 0.69);
+          list-style: none;
+          font-size: .8rem;
+          &:hover {
+            border-top: 1px solid;
+            border-color: $central-gold;
+            background-color: rgba(31, 40, 62, 0.56);
+          }
+          &:disabled {
+            color: #ccc;
+          }
+          a {
+            margin-left: 1rem;
+            color: $central-gold-text;
+            font-weight: 400;
+          }
+        }
       }
     }
   }
@@ -90,12 +78,12 @@
 }
 
 .anim-out {
-  animation: hideRight 0.35s forwards;
+  animation: hideRight 0.035s forwards;
 }
 
 @keyframes hideRight {
   0% {
-    transform: translate(600px, 0);
+    transform: translate(-200px, 0);
     animation-timing-function: ease-out;
   }
 
@@ -112,7 +100,7 @@
   }
 
   100% {
-    transform: translate(600px, 0px);
+    transform: translate(-200px, 0px);
     animation-timing-function: ease-in;
   }
 }
