--- a/src/app/resume/carousel/carousel.component.scss
+++ b/src/app/resume/carousel/carousel.component.scss
@@ -1,102 +1,36 @@
 @import '../../../assets/stylesheets/variables';
 
-.index-top{
-  z-index:111100;
+.width-container {
+  max-width: $container-width;
+  margin: 0 auto;
+  padding: 20px;
 }
 
 .carousel-container {
   opacity: 1;
   z-index:10;
-  margin:0 auto;
+  margin:50px auto;
   width: 250px;
-  height:200px;
+  height:360px;
   perspective: 2000px;
 }
 
 .carousel {
-  height: 80%;
-  width: 100%;
+  height: 100%;
   position: relative;
   transform-style: preserve-3d;
   transition: transform 0.4s ease-in-out;
 }
 
 
-
 .overlay {
-  height:500px;
+  height:540px;
   background-color: rgba(0, 0, 60, 0.9);
-  position:absolute;
-  top:-100px;
 }
 
-
-
-.collapse-tab-static {
-  position:absolute;
-  top:-20px;
-  cursor:pointer;
-  font-size:18px;
-  padding:5px;
-  border-radius:5px;
-  color:black;
-  background-color:white;
-  z-index:10;
-  &:hover{
-    background-color:gold;
-  }
+.media {
+  padding: 5px;
 }
-
-.in-visible {
-  opacity: 0;
-  transition-property: opacity;
-  transition-duration: .5s;
-}
-
-
-.am-visible {
-  opacity: 1;
-  transition-property: opacity;
-  transition-duration: .5s;
-}
-
-.anim-in {
-  animation: revealDown 0.55s forwards;
-}
-
-
-.anim-out {
-  animation: hideUp 0.55s forwards;
-}
-
-
-@keyframes hideUp {
-  0% {
-    transform: translate(0px, -420px);
-    animation-timing-function: ease-in-out;
-  }
-
-  100% {
-    transform: translate(0px, 100px);
-    animation-timing-function: ease-in-out;
-  }
-}
-
-
-
-@keyframes revealDown {
-  0% {
-    transform: translate(0px, 100px);
-    animation-timing-function: ease-in-out;
-  }
-
-  100% {
-    transform: translate(0px, -420px);
-    animation-timing-function: ease-in-out;
-  }
-}
-
-
 
 .item {
   font-weight:600;
@@ -106,21 +40,25 @@
   flex-direction:column;
   align-items: center;
   justify-content: center;
-  font-size: 1rem;
-  color: #ffffff;
+  font-size: 1.1rem;
+  padding: 5px 10px;
+  color: $central-gold;
   cursor: pointer;
   text-align: center;
-  border-radius: 5px;
-  background: #172751;
-  border:2px solid #1D65A6;
+  border-radius: 7px;
+  background: rgba(24, 59, 80, 0.88);
+  border:1px solid #3c6d82;
   box-shadow: 0 0 50px rgba(0, 0, 0, 0.7);
-//  backface-visibility: hidden;
+  text-shadow: 1px 1px 2px black;
+ // backface-visibility: hidden;
   .box-image{
-    width:170px;
-    padding:10px;
+    width:160px;
+    border:1px solid #213343;
+    margin:15px;
+    box-shadow: 0px 1px 4px rgba(0, 0, 0, 0.5);
   }
   &:hover{
-    border:2px solid gold;
+    border:1px solid $central-gold;
   }
 }
 
