--- a/src/assets/stylesheets/styles.scss
+++ b/src/assets/stylesheets/styles.scss
@@ -9,7 +9,7 @@ body {
   font-size: 16px;
 // project
  // color:#ffb35c;
-  background-color: #040e16;
+  background-color: #041e29;
 
 }
 
